Adding blend_xs page

--- a/xss/tests/blend_xs_template.html
+++ b/xss/tests/blend_xs_template.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" type="text/css" href="blend_xs.css" media="screen" />
 </head>
 <body>
-<script id="initial_script" type="text/javascript">
-</script>
+<script type="text/javascript" src="../js/XMLWriter.js"></script>
+<script id="initial_script" type="text/javascript"></script>
 <div id="wrap">
 
 <div id="header">
@@ -27,7 +27,6 @@
 	<div id="right-container">
 
 	</div>
-
 </div>
 <div style="clear: both;"> </div>
 
@@ -37,6 +36,10 @@
 Supported by <a href="http://www.codexcess.com/"> XS Programming Base </a>, Thanks to <a href="http://www.codexcess.com/about">The XS Team</a>
 </div>
 </div>
-
+<form action="/apply" enctype="multipart/form-data" method="post">
+	<p>		
+		<input type="submit" value="Apply" size="40">
+	</p>
+</form>
 </body>
 </html>
