--- a/xss/tests/xs_blend_service.html
+++ b/xss/tests/xs_blend_service.html
@@ -17,8 +17,8 @@
 <form action="/blend" enctype="multipart/form-data" method="post">
 	<p>
 		Please specify a file: <br>
-		<input type="file" name="datafile" size="40">
-		<input type="submit" value="Run script">
+		<input type="file" name="datafile" size="200">
+		<input type="submit" value="Go!!!" size="40">
 	</p>
 </form>
 
